apply plugin: 'java-library'

group 'fr.flowarg'

compileJava {
    sourceCompatibility = JavaVersion.VERSION_1_8
    options.encoding = 'UTF-8'
}

task sourcesJar(type: Jar, dependsOn: build) {
    classifier 'sources'
    from sourceSets.main.allSource
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation 'com.google.code.gson:gson:2.8.6'
    implementation 'fr.flowarg:flowmultitools:1.2.+'
}
